something wrong with stat-service DB